--- a/index.html
+++ b/index.html
@@ -1,50 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currículum Vitae</title>
-    <link rel="stylesheet" href="estilo1.css">
+    <title>Document</title>
 </head>
-
 <body>
-    <h1>Currículum Vitae</h1>
-    <h2>Jorge Carrillo de Albornoz Torres</h2>
-    <img src="jordi.jpeg" alt="" id="retrato">
-    <h3>Datos personales</h3>
-    <p>Dirección: C/Jose Luis Perales, 23 13600
-        Alcázar de San Juan (Ciudad Real)</p>
-    <p>Email: <a href="jordiwildasesorias@gmail.com">jordiwildasesorias@gmail.com</a></p>
-    <h3>Formación Académica</h3>
-    <ul>
-        <li><a href="http://www.iesjuanbosco.es">Graduado en ESO</a></li>
-        <li>Técnico Superior en Desarrollo de Aplicaciones Web</li>
-        <li class="importante">Ingeniero Aeronáutico</li>
-    </ul>
-    <h3>Experiencia Profesional</h3>
-    <table>
-        <tbody>
-            <caption>Experiencia Laboral</caption>
-            <tr>
-                <td colspan="2">Lugares y periodos</td>
-            </tr>
-            <tr>
-                <td>2000-2005</td>
-                <td>IBM</td>
-            </tr>
-            <tr>
-                <td>2005-2010</td>
-                <td>HP</td>
-            </tr>
-            <tr>
-                <td>2010-Actualidad</td>
-                <td>Amazon</td>
-            </tr>
-        </tbody>
-    </table>
-    <p class="titulo-grande">Disponibilidad Inmediata</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque harum sequi reprehenderit ipsam deleniti deserunt minus, itaque aperiam consequuntur enim. Delectus, dignissimos qui soluta doloribus hic voluptatem in. Dolorem, maiores.</p>
+    <h1>Seleccione un currículum</h1>
+    <p><a href="curriculum1.html" target="_blank">Curriculum 1</a></p>
+    <p><a href="curriculum2.html" target="_blank">Curriculum 2</a></p>
 </body>
-
 </html>
