--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Indice</title>
 </head>
-<body>
+<body style="background-color: darkturquoise;">
     <h1>Seleccione un currículum</h1>
     <p><a href="curriculum1.html" target="_blank">Curriculum 1</a></p>
     <p><a href="curriculum2.html" target="_blank">Curriculum 2</a></p>
